--- a/TriHuynh/tsconfig.app.json
+++ b/TriHuynh/tsconfig.app.json
@@ -23,5 +23,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src", "src/components/common/ui/3D/Character3D.tsx"]
 }
